--- a/KGERP/Views/Configuration/UserMenuAssignment.cshtml
+++ b/KGERP/Views/Configuration/UserMenuAssignment.cshtml
@@ -207,7 +207,7 @@
         $("#txtEmployeeKGId").autocomplete({
                 source: function (request, response) {
                     $.ajax({
-                       url:"@Url.Action("getallEmployeeforMenu", "getallEmployeeforMenu")",
+                       url:"@Url.Action("getallEmployeeforMenu", "Configuration")",
                         //data: "{ 'prefix': '" + request.term + "'}",
                         data: { prefix: request.term },
                         dataType: "json",
