Cheque module retouch

--- a/KGERP/Views/ChequeRegister/ChequeGenerate.cshtml
+++ b/KGERP/Views/ChequeRegister/ChequeGenerate.cshtml
@@ -100,14 +100,14 @@
                                         <th>Pay To</th>
                                         <th>Amount</th>
                                         <th>Status</th>
-                                        <th>Print</th>
+                                        <th>Action</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     @{
                                         if (searchData != null)
                                         {
-                                            foreach (var item in searchData.ChequeRegisterList)
+                                            foreach (var item in searchData.ChequeRegisterList.OrderByDescending(x => x.ChequeRegisterId))
                                             {
                                                 <tr>
                                                     <th>@(++sl)</th>
@@ -131,43 +131,44 @@
                                                     <td><p style="text-align:left !important;">@item.PayTo</p></td>
                                                     <td><p style="text-align:right !important;">@item.Amount</p></td>
                                                     <td>
-                                                        @if (!item.IsSigned)
+                                                        @if (!item.IsPrinted)
                                                         {
-                                                            <center class="btn btn-xs btn-warning text-center d-block" title="Click to signing" style="padding-left: 7px; padding-right: 7px;" id="showToHide" onclick="ChequeGenerate(@item.ChequeRegisterId)">
-                                                                Unsigned
+                                                            <center class="btn btn-xs btn-warning text-center d-block" style="padding-left: 7px; padding-right: 7px;" id="showToHide_@item.ChequeRegisterId" onclick="ChequeGenerate('@item.ChequeRegisterId')">
+                                                                Ungenerated
                                                             </center>
-                                                            <center class="btn btn-xs btn-success text-center hidden" style="padding-left: 7px; padding-right: 7px;" id="hideToShow">
-                                                                Signed
+                                                            <center class="btn btn-xs btn-success text-center hidden" style="padding-left: 7px; padding-right: 7px;" id="hideToShow_@item.ChequeRegisterId">
+                                                                Generated
                                                             </center>
                                                         }
                                                         else
                                                         {
                                                             <center class="btn btn-xs btn-success text-center" style="padding-left: 7px; padding-right: 7px;">
-                                                                Signed
+                                                                Generated
                                                             </center>
                                                         }
                                                     </td>
                                                     <td class="text-center">
-                                                        @if (item.IsSigned)
+                                                        @if (item.IsPrinted)
                                                         {
-                                                            <a class="btn btn-xs btn-primary text-center" target="_blank" href="~/Report/ChequeRegisterPrinting?chequeRegisterId=@item.ChequeRegisterId">
+                                                            <a class="btn btn-xs btn-primary text-center" id="hideToShowPrint_@item.ChequeRegisterId" target="_blank" href="~/Report/ChequeRegisterPrinting?chequeRegisterId=@item.ChequeRegisterId">
                                                                 <i class="fa fa-print"></i> Print Here
                                                             </a>
                                                         }
                                                         else
                                                         {
-                                                            <a class="btn btn-xs btn-primary text-center hidden" id="hideToShowPrint" target="_blank" href="~/Report/ChequeRegisterPrinting?chequeRegisterId=@item.ChequeRegisterId">
+                                                            <a class="btn btn-xs btn-primary text-center hidden" id="hideToShowPrint_@item.ChequeRegisterId" target="_blank" href="~/Report/ChequeRegisterPrinting?chequeRegisterId=@item.ChequeRegisterId">
                                                                 <i class="fa fa-print"></i> Print Here
                                                             </a>
-                                                            <small class="text-center text-gray d-block" id="showToHidePrint">Unavailable</small>
+                                                            <small class="text-center text-gray d-block hidden" id="showToHidePrint_@item.ChequeRegisterId">Unavailable</small>
                                                         }
                                                     </td>
+
                                                 </tr>
                                             }
                                         }
                                         else
                                         {
-                                            foreach (var item in Model.ChequeRegisterList)
+                                            foreach (var item in Model.ChequeRegisterList.OrderByDescending(x => x.ChequeRegisterId))
                                             {
                                                 <tr>
                                                     <th>@(++sl)</th>
@@ -191,35 +192,35 @@
                                                     <td><p style="text-align:left !important;">@item.PayTo</p></td>
                                                     <td><p style="text-align:right !important;">@item.Amount</p></td>
                                                     <td>
-                                                        @if (!item.IsSigned)
+                                                        @if (!item.IsPrinted)
                                                         {
-                                                            <center class="btn btn-xs btn-warning text-center d-block" title="Click to signing" style="padding-left: 7px; padding-right: 7px;" id="showToHide" onclick="ChequeGenerate(@item.ChequeRegisterId)">
-                                                                Unsigned
+                                                            <center class="btn btn-xs btn-warning text-center d-block" style="padding-left: 7px; padding-right: 7px;" id="showToHide_@item.ChequeRegisterId" onclick="ChequeGenerate('@item.ChequeRegisterId')">
+                                                                Ungenerated
                                                             </center>
-                                                            <center class="btn btn-xs btn-success text-center hidden" style="padding-left: 7px; padding-right: 7px;" id="hideToShow">
-                                                                Signed
+                                                            <center class="btn btn-xs btn-success text-center hidden" style="padding-left: 7px; padding-right: 7px;" id="hideToShow_@item.ChequeRegisterId">
+                                                                Generated
                                                             </center>
                                                         }
                                                         else
                                                         {
                                                             <center class="btn btn-xs btn-success text-center" style="padding-left: 7px; padding-right: 7px;">
-                                                                Signed
+                                                                Generated
                                                             </center>
                                                         }
                                                     </td>
                                                     <td class="text-center">
-                                                        @if (item.IsSigned)
+                                                        @if (item.IsPrinted)
                                                         {
-                                                            <a class="btn btn-xs btn-primary text-center" target="_blank" href="~/Report/ChequeRegisterPrinting?chequeRegisterId=@item.ChequeRegisterId">
+                                                            <a class="btn btn-xs btn-primary text-center" id="hideToShowPrint_@item.ChequeRegisterId" target="_blank" href="~/Report/ChequeRegisterPrinting?chequeRegisterId=@item.ChequeRegisterId">
                                                                 <i class="fa fa-print"></i> Print Here
                                                             </a>
                                                         }
                                                         else
                                                         {
-                                                            <a class="btn btn-xs btn-primary text-center hidden" id="hideToShowPrint" target="_blank" href="~/Report/ChequeRegisterPrinting?chequeRegisterId=@item.ChequeRegisterId">
+                                                            <a class="btn btn-xs btn-primary text-center hidden" id="hideToShowPrint_@item.ChequeRegisterId" target="_blank" href="~/Report/ChequeRegisterPrinting?chequeRegisterId=@item.ChequeRegisterId">
                                                                 <i class="fa fa-print"></i> Print Here
                                                             </a>
-                                                            <small class="text-center text-gray d-block" id="showToHidePrint">Unavailable</small>
+                                                            <small class="text-center text-gray d-block hidden" id="showToHidePrint_@item.ChequeRegisterId">Unavailable</small>
                                                         }
                                                     </td>
                                                 </tr>
@@ -235,6 +236,23 @@
         </div>
     </div>
 </section>
+
+<div class="modal fade" id="confirmationModal" tabindex="-1" role="dialog" aria-labelledby="confirmationModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header" style="padding: 0 20px;">
+                <h3 class="text-primary" id="confirmationModalLabel">Confirmation</h3>
+            </div>
+            <div class="modal-body" style="padding: 30px 20px;">
+                <h4>Are you sure you want to generate a cheque?</h4>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" id="confirmSignButton">Yes</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 @Scripts.Render("~/bundles/jqueryui")
 @Styles.Render("~/Content/cssjqryUi")
@@ -253,22 +271,28 @@
         });
 
         function ChequeGenerate(chequeRegisterId) {
-            $.ajax({
-                type: "GET",
-                url: "/ChequeRegister/ChequePdfGenerate",
-                dataType: "json",
-                data: { chequeRegisterId: chequeRegisterId },
-                success: function (data) {
-                    if (data) {
-                        $("#showToHide").removeClass("d-block").addClass("hidden");
-                        $("#hideToShow").removeClass("hidden").addClass("d-block");
+            $('#confirmationModal').modal('show');
 
-                        $("#hideToShowPrint").removeClass("hidden").addClass("d-block");
-                        $("#showToHidePrint").removeClass("d-block").addClass("hidden");
+            $('#confirmSignButton').click(function () {
+                $.ajax({
+                    type: "GET",
+                    url: "/ChequeRegister/ChequePdfGenerate",
+                    dataType: "json",
+                    data: { chequeRegisterId: chequeRegisterId },
+                    success: function (data) {
+                        if (data) {
+                            $("#showToHide_" + chequeRegisterId).removeClass("d-block").addClass("hidden");
+                            $("#hideToShow_" + chequeRegisterId).removeClass("hidden").addClass("d-block");
+
+                            $("#showToHidePrint_" + chequeRegisterId).removeClass("d-block").addClass("hidden");
+                            $("#hideToShowPrint_" + chequeRegisterId).removeClass("hidden").addClass("d-block");
+                        }
                     }
-                }
-            });
+                });
 
+                $('#confirmationModal').modal('hide');
+            });
         }
+
     </script>
 }
