--- a/KGERP/Views/ChequeRegister/ChequePrinting.cshtml
+++ b/KGERP/Views/ChequeRegister/ChequePrinting.cshtml
@@ -99,7 +99,7 @@
                                         <th>Cheque No</th>
                                         <th>Pay To</th>
                                         <th>Amount</th>
-                                        <th>Print</th>
+                                        <th>Action</th>
                                     </tr>
                                 </thead>
                                 <tbody>
