--- a/KGERP/Views/ChequeRegister/ChequeSigning.cshtml
+++ b/KGERP/Views/ChequeRegister/ChequeSigning.cshtml
@@ -212,7 +212,7 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header" style="padding: 0 20px;">
-                <h3 id="confirmationModalLabel">Confirmation</h3>
+                <h3 class="text-primary" id="confirmationModalLabel">Confirmation</h3>
             </div>
             <div class="modal-body" style="padding: 30px 20px;">
                 <h4>Are you sure you want to sign?</h4>
